--- a/HaloKitProduct/Podfile
+++ b/HaloKitProduct/Podfile
@@ -8,5 +8,5 @@ target 'HaloKitProduct' do
   pod 'SwiftyJSON', '~> 3.1.4'
   pod 'SDWebImage', '~> 4.0.0'
   pod 'CocoaAsyncSocket', '~> 7.6.1'
-
+  pod 'Getui', '~> 1.6.2.0'
 end
